tests/paczka1/fuzzy1/85647961.err
Error in line 1: kfBTT S385 68,6
Error in line 6: kfBTT A382 84,3
Error in line 5: i9RF S385 95,8
Error in line 7: kfBTT S385 45,5
Error in line 17: rZBk0xl A382 98,1
Error in line 30: kfBTT S385 63,9
Error in line 29: rZBk0xl A469 369,6
